[tool.poetry]
name = "pypfb-pcdc"
version = "1.0.0"
description = "Python SDK for PFB format"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
packages = [
    { include = "pfb_pcdc", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
click = "^8.1.7"
fastavro = "~1.8.2"
python-json-logger = ">=2.0.0"
PyYAML = "^6.0.1"
importlib_metadata = { version = ">=3.6.0", python = "<=3.9" }
gen3dictionary = ">=2.0.3"
aiohttp = "^3.6.3"
dictionaryutils = "^3.4.8"
gen3 = "^4.11.3"

[tool.poetry.dev-dependencies]
codacy-coverage = "*"
pytest = "~=6.2.5"
pytest-cov = "~=2.5"
gen3git = "*"

[tool.poetry.scripts]
pfb_pcdc = 'pfb_pcdc.cli:main'

[tool.poetry.plugins."pfb_pcdc.plugins"]
"from_gen3dict" = "pfb_pcdc.importers.gen3dict"
"from_json" = "pfb_pcdc.importers.json"
"from_tsv" = "pfb_pcdc.importers.tsv"
"to_gremlin" = "pfb_pcdc.exporters.gremlin"
"to_tsv" = "pfb_pcdc.exporters.tsv"
"show" = "pfb_pcdc.commands.show"
"add" = "pfb_pcdc.commands.add"
"rename" = "pfb_pcdc.commands.rename"
"import" = "pfb_pcdc.commands.import"
"etl" = "pfb_pcdc.commands.etl"

[build-system]
requires = ["poetry>=1.4.1"]
build-backend = "poetry.masonry.api"
